--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/IlyassMaH/Ilyass.GitHub.io">View on GitHub</a>
-
+          <img src="http://i.imgur.com/kTmWp0t.png" alt="Mountain View" style="width:304px;height:228px;">
           <h1 id="project_title">Ilyass.github.io</h1>
           <h2 id="project_tagline">About Me</h2>
 
